# AI-Agent-Automation-Platform

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/agents/: executor_agent.py  planner_agent.py
app/api/v1/: routes_health.py  routes_runs.py  routes_tasks.py
app/core/: config.py
app/db/: base.py  session.py
app/db/models/: audit_log.py  run.py  task.py
app/memory/: memory_store.py  vector_store.py
app/orchestration/: agent_runner.py
app/services/: audit_service.py  llm_service.py  run_service.py  task_service.py
app/tools/: registry.py  sample_tool.py  web_search_tool.py
app/utils/: metrics.py
app/workers/: celery_app.py  scheduler.py  tasks_agent.py
docker/: Dockerfile.api  Dockerfile.worker
docs/: architecture-diagram.md  architecture.md  design-decisions.md
